Added the ability to runn using WebListener so that we can self-host and still use NTLM authentication.
Also switched the IIS settings to disallow anonymous access and use Windows authentication.

--- a/src/WebListenerTest/Properties/launchSettings.json
+++ b/src/WebListenerTest/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:53662/",
       "sslPort": 0
@@ -16,11 +16,12 @@
       }
     },
     "WebListenerTest": {
-      "commandName": "Project",
+      "commandName": "weblistener",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "WEB_LISTENER": "1"
       }
     }
   }
