Added some authorization based on user roles

--- a/src/WebListenerTest/appsettings.json
+++ b/src/WebListenerTest/appsettings.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Roles": {
+    "Marketing": "<Specify AD role name associated with marketing here>",
+    "Finance": "<Specify AD role name associated with finance here>"
   }
 }
